Fix letter spacing

--- a/stylesheets/_factbox.scss
+++ b/stylesheets/_factbox.scss
@@ -47,7 +47,7 @@
 }
 
 .fullpage-b {
-    .intro p {
+    .text-intro p {
         letter-spacing: -0.05mm;
     }
 }
